Bug 1268569 - Don't bother removing files from cache2/doomed dir after shutdown. r=michal